# amadeus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.c
.github/workflows/: CICD.yml
include/amadeus/: prompt.h
src/: prompt.c
